--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,8 +6,20 @@ pipeline {
                 git credentialsId: '43d1a3b7-29a0-4257-89d9-8e0f9510f2b6', url: 'https://github.com/mukesh3366/jenkins-terraform-ALB.git'
             }
         }
-        stage(''){
-
+        stage('DockerBuild'){
+            steps{
+                sh 'docker login -u mukesh -p dckr_pat_kxPXQDYtk_9VeDedqqJiXJXR5-M'
+                sh 'docker build -t mukesh36/ngnix-app-terraform:1 .'
+                sh 'docker push mukesh36/ngnix-app-terraform:1' 
+                sh 'docker run -d --name AppTerraContainer mukesh36/ngnix-app-terraform:1'
+            }
+        }
+        stage('TerraformExecutionFor'){
+            steps{
+                sh 'terraform init'
+                sh 'terraform plan'
+                sh 'terraform apply --auto-approve'
+            }
         }
     }//stages closing
-}//pipeline closing
+}//pipeline closing 
